--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,7 +3,7 @@
     display: inline-flex;
     // align-items: center;
     justify-content: center;
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     padding: 6px 16px;
     min-width: 100px;
