--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -4,11 +4,15 @@
     --search-top-spacer: 9px;
     --search-button-width: 52px;
 
-    width: 100%;
-    height: var(--default-layout-header-height, 60px);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 12%);
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: var(--default-layout-header-height);
+    background-color: var(--white);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 12%);
 }
 
 .inner {
@@ -18,6 +22,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.logo {
+    display: flex;
 }
 
 //actions
@@ -63,7 +71,7 @@
 .btn-upload {
     color: var(--textColor);
     font-size: 1.6rem;
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-weight: 600;
     border: 1px solid rgba(22, 24, 35, 0.12);
     border-radius: 2px;
@@ -92,6 +100,6 @@
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--white);
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     background-color: var(--primary);
 }
